kubernetes-networks/canary/web-v1-deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: web-1
spec:
  replicas: 3
  selector:
    matchLabels:
      app: web
      version: v1
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 0
      maxSurge: 1 
  template:
    metadata:
      labels:
        app: web
        version: v1
    spec:
      containers:
        - image: greysd/kubernetes-intro:latest 
          name: web
          volumeMounts:
            - name: app
              mountPath: /app
          readinessProbe:
            initialDelaySeconds: 10
            periodSeconds: 10
            httpGet:
              path: /index.html
              port: 8000
          livenessProbe:
            initialDelaySeconds: 10
            periodSeconds: 10
            tcpSocket:
              port: 8000
      volumes:
        - name: app
          emptyDir: {}
