kubernetes-networks/canary/web-v1-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: web-1
spec:
  selector:
    app: web
    version: v1
  type: ClusterIP
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8000
