kubernetes-networks/canary/web-v2-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: web-2
spec:
  selector:
    app: web
    version: v2
  type: ClusterIP
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8000
