kubernetes-networks/canary/web-v1-ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: web-1
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - host: canary.local
    http:
      paths:
      - path: /web
        backend:
          serviceName: web-1
          servicePort: 80
