kubernetes-networks/canary/web-v2-ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: web-2
  annotations:
    nginx.ingress.kubernetes.io/canary: "true"
    nginx.ingress.kubernetes.io/canary-by-header: "canary"
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - host: canary.local
    http:
      paths:
      - path: /web
        backend:
          serviceName: web-2
          servicePort: 80
